--- a/src/os/Makefile.am
+++ b/src/os/Makefile.am
@@ -85,17 +85,10 @@ noinst_HEADERS += \
 	os/ZFSFileStoreBackend.h
 
 if WITH_SLIBROCKSDB
-libos_rocksdb_la_SOURCES = os/RocksDBStore.cc
-libos_rocksdb_la_CXXFLAGS = ${AM_CXXFLAGS} ${LIBROCKSDB_CFLAGS} -std=gnu++11 -I rocksdb/include
-libos_rocksdb_la_LIBADD = rocksdb/librocksdb.la
-noinst_LTLIBRARIES += libos_rocksdb.la
-noinst_HEADERS += os/RocksDBStore.h
-endif
-if WITH_DLIBROCKSDB
-libos_rocksdb_la_SOURCES = os/RocksDBStore.cc
-libos_rocksdb_la_CXXFLAGS = ${AM_CXXFLAGS} ${LIBROCKSDB_CFLAGS} -std=gnu++11
-libos_rocksdb_la_LIBADD = -lrocksdb
-noinst_LTLIBRARIES += libos_rocksdb.la
+libos_rocksdb_a_SOURCES = os/RocksDBStore.cc rocksdb/librocksdb.a
+libos_rocksdb_a_CXXFLAGS = ${AM_CXXFLAGS} ${LIBROCKSDB_CFLAGS} -std=gnu++11 -I rocksdb/include rocksdb/librocksdb.a
+libos_rocksdb_a_LIBADD = 
+noinst_LIBRARIES += libos_rocksdb.a
 noinst_HEADERS += os/RocksDBStore.h
 endif
 if WITH_LIBZFS
