--- a/src/Makefile-server.am
+++ b/src/Makefile-server.am
@@ -43,7 +43,7 @@ bin_SCRIPTS += \
 	ceph-clsinfo
 
 ceph_osd_SOURCES = ceph_osd.cc
-ceph_osd_LDADD = $(LIBOSD) $(CEPH_GLOBAL) $(LIBCOMMON)
+ceph_osd_LDADD = $(LIBOSD) $(LIBOS) $(CEPH_GLOBAL) $(LIBCOMMON)
 bin_PROGRAMS += ceph-osd
 
 endif # WITH_OSD
