--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 	path = src/gmock
 	url = https://github.com/ceph/gmock.git
         branch = ceph-release-1.7.0
+[submodule "src/kv/kinetic-cpp-client"]
+	path = src/kv/kinetic-cpp-client
+	url = https://github.com/ceph/kinetic-cpp-client
