FreeBSD/autobuild: Still one more -ldl that needs to be Linux-ized
Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>

--- a/src/rgw/Makefile.am
+++ b/src/rgw/Makefile.am
@@ -68,8 +68,12 @@ LIBRGW_DEPS += \
 	-lcurl \
 	-lexpat \
 	-lm \
-	-lfcgi \
+	-lfcgi 
+
+if LINUX
+LIBRGW_DEPS += \
 	-ldl
+endif
 
 CIVETWEB_INCLUDE = --include $(srcdir)/civetweb/include/civetweb_conf.h
 
