--- a/qa/suites/rados/objectstore/backends/objectstore.yaml
+++ b/qa/suites/rados/objectstore/backends/objectstore.yaml
@@ -8,5 +8,5 @@ tasks:
 - install:
 - exec:
     client.0:
-      - mkdir $TESTDIR/archive/ostest && cd $TESTDIR/archive/ostest && ulimit -Sn 16384 && CEPH_ARGS="--no-log-to-stderr --log-file $TESTDIR/archive/ceph_test_objectstore.log --debug-filestore 20 --debug-bluestore 20 --debug-bluefs 20 --bluefs_compact_log_sync true" ceph_test_objectstore --gtest_filter=-*/3 --gtest_catch_exceptions=0
+      - mkdir $TESTDIR/archive/ostest && cd $TESTDIR/archive/ostest && ulimit -Sn 16384 && CEPH_ARGS="--no-log-to-stderr --log-file $TESTDIR/archive/ceph_test_objectstore.log --debug-filestore 20 --debug-bluestore 20 --debug-bluefs 20 --bluefs_compact_log_sync true --bluestore-allocator stupid" ceph_test_objectstore --gtest_filter=-*/3 --gtest_catch_exceptions=0
       - rm -rf $TESTDIR/archive/ostest
